# pyactup

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  contributing.md  pyactup.py  pyproject.toml  requirement.txt  requirements.txt  salience-example.md  setup.cfg  setup.py  test_pyactup.py
doc/: Makefile  conf.py  index.rst
examples/: #safe_risky.py#  rps.py  safe_risky.py
pyactup/: pyactup.py
