[metadata]
name = pyactup
version = attr: pyactup.__version__
author = "Don Morrison",
author_email = "dfm2@cmu.edu",
description = "A lightweight Python implementation of a subset of the ACT-R cognitive architecture’s Declarative Memory",
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/dfmorrison/pyactup/",
license = MIT
classifiers = 
  License :: OSI Approved :: MIT License,
  Programming Language :: Python,
  Programming Language :: Python :: 3 :: Only,
  Programming Language :: Python :: 3.8,
  Programming Language :: Python :: 3.9,
  Programming Language :: Python :: 3.10,
  Programming Language :: Python :: 3.11,
  Operating System :: OS Independent

[options]
python_requires =
  >= 3.8
install_requires =
  numpy
  pylru
  prettytable
tests_require =
  pytest 