[metadata]
name = pyactup
version = attr: pyactup.__version__
author = Don Morrison
author_email = dfm2@cmu.edu
description = "A lightweight Python implementation of a subset of the ACT-R cognitive architecture’s Declarative Memory",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfmorrison/pyactup/
license = MIT

[options]
python_requires =
  >= 3.8
install_requires =
  numpy
  pylru
  prettytable
tests_require =
  pytest 